--- a/AgentQnA/docker_compose/intel/hpu/gaudi/compose.yaml
+++ b/AgentQnA/docker_compose/intel/hpu/gaudi/compose.yaml
@@ -34,6 +34,7 @@ services:
       LANGCHAIN_API_KEY: ${LANGCHAIN_API_KEY}
       LANGCHAIN_TRACING_V2: ${LANGCHAIN_TRACING_V2}
       LANGCHAIN_PROJECT: "opea-worker-agent-service"
+      mcp_sse_server_url: ${MCP_SSE_SERVER_URL}
       port: 9095
 
   worker-sql-agent:
@@ -66,6 +67,7 @@ services:
       no_proxy: ${no_proxy}
       http_proxy: ${http_proxy}
       https_proxy: ${https_proxy}
+      mcp_sse_server_url: ${MCP_SSE_SERVER_URL}
       port: 9096
 
   supervisor-react-agent:
@@ -106,6 +108,7 @@ services:
       CRAG_SERVER: $CRAG_SERVER
       WORKER_AGENT_URL: $WORKER_AGENT_URL
       SQL_AGENT_URL: $SQL_AGENT_URL
+      mcp_sse_server_url: ${MCP_SSE_SERVER_URL}
       port: 9090
   mock-api:
     image: docker.io/aicrowd/kdd-cup-24-crag-mock-api:v0
